--- a/ServiceTagPuller/Forms/Main Form/ResultsBody.html
+++ b/ServiceTagPuller/Forms/Main Form/ResultsBody.html
@@ -13,8 +13,9 @@
     <div id='divSerial'>&nbsp;</div>
     <div id='divCPU'>&nbsp;</div>
     <div id='divRAM'>&nbsp;</div>
-    <div id='divHDD'>&nbsp;</div>
     <div id='divOS'>&nbsp;</div>
+    <div id='divHDD'>&nbsp;</div>
+    <div id='divMAC'>&nbsp;</div>
     <div id='divSoftware'>&nbsp;</div>
     <div id='divOffice'><b>&nbsp;</b></div>
 </body>
